<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vnpt.vnptline.ui.activity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/etSoDiDong"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="sans-serif"
                android:hint="@string/soDiDongEmail"
                android:inputType="phone"
                android:textColor="@color/md_grey_900"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/md_grey_900"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:id="@+id/btnDangNhap"
            android:text="@string/dangNhap"
            android:textColor="@color/md_white"
            android:background="@drawable/bg_button_orange_700"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quenMatKhau"
            android:textSize="14sp"
            android:id="@+id/txtQuenMatKhau"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textColor="@color/md_blue_700"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="9dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/md_grey_800"
            android:text="@string/taiKhoanVnptLine"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/txtDangKyNgay"
            android:textColor="@color/md_blue_500"
            android:layout_marginLeft="4dp"
            android:textStyle="bold"
            android:text="@string/dangKyNgay"/>
    </LinearLayout>
</RelativeLayout>
