<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_100"
    tools:context="com.vnpt.vnptline.ui.activity.UuDaiActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/login_banner"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/dangKyThanhVien"
            android:textColor="@color/md_grey_800"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/deNhanUuDaiTotNhat"
            android:textColor="@color/md_grey_600"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textColor="@color/md_blue_700"
            android:id="@+id/btnDangNhap"
            android:text="@string/dangNhap"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@drawable/bg_button_white"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textColor="@color/md_white"
            android:id="@+id/btnDangKy"
            android:layout_marginLeft="20dp"
            android:text="@string/dangKy"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@drawable/bg_button_blue_500"/>
    </LinearLayout>
</RelativeLayout>
