<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vnpt.vnptline.ui.activity.ForgotPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nhapEmailPhoneBenDuoi"
                android:textSize="14sp"
                android:textColor="@color/md_grey_800"/>
            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif"
                android:hint="@string/soDiDongEmail"
                android:inputType="phone"
                android:textColor="@color/md_grey_900"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:id="@+id/btnForgotPassword"
            android:text="@string/tiepTuc"
            android:textColor="@color/md_white"
            android:background="@drawable/bg_button_orange_700"/>

    </LinearLayout>
</RelativeLayout>
