<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/md_white"
            android:background="@color/md_blue_500"
            android:textAllCaps="true"
            android:text="@string/xepHangDanhGia"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="top"
            android:textStyle="bold"
            android:text="@string/xepHangSao"/>

        <com.willy.ratingbar.ScaleRatingBar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/simpleRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srb_numStars="5"
            app:srb_rating="4"
            app:srb_starWidth="25dp"
            app:srb_starHeight="25dp"
            app:srb_starPadding="2dp"
            android:layout_marginRight="8dp"
            app:srb_stepSize="0.5"
            app:srb_isIndicator="false"
            app:srb_scrollable="true"
            app:srb_clearRatingEnabled="true">
        </com.willy.ratingbar.ScaleRatingBar>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:text="@string/tieuDe"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:id="@+id/txtTieuDe"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_edit_text"
            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:text="@string/noiDungDanhGia"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/txtNoiDung"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_edit_text"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@color/md_blue_500"
            android:gravity="center_vertical"
            android:weightSum="10">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:id="@+id/btnDanhGia"
                android:textSize="16sp"
                android:background="@color/md_blue_500"
                android:textColor="@color/md_white"
                android:text="@string/danhGia"/>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@color/md_white"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:id="@+id/btnHuy"
                android:textSize="16sp"
                android:background="@drawable/bg_button_corner_left_right_bottom"
                android:textColor="@color/md_white"
                android:text="@string/boQua"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
