<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.SettingFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/md_blue_500"
        android:text="@string/caiDat"
        android:textSize="16sp"
        android:textColor="@color/md_white"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ngonNgu"
                android:textSize="14sp"
                android:layout_weight="10"
                android:textColor="@color/md_grey_800" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiengViet"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/md_grey_800" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginRight="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_grey_900"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dieuKhoan"
                android:textSize="14sp"
                android:layout_weight="10"
                android:textColor="@color/md_grey_800" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginRight="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_grey_900"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chinhSachBaoMat"
                android:textSize="14sp"
                android:layout_weight="10"
                android:textColor="@color/md_grey_800" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginRight="8dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
