<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="Mỳ tôm trứng"
        android:textColor="@color/md_white"
        android:id="@+id/txtTitle"
        android:textSize="16sp"
        android:background="@color/md_blue_700"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textColor="@color/md_grey_800"
            android:text="@string/soLuong"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:inputType="number"
            android:paddingLeft="4dp"
            android:textSize="14sp"
            android:background="@drawable/bg_edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"

        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textColor="@color/md_grey_800"
            android:text="@string/donGia"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textColor="@color/md_grey_900"
            android:textSize="16sp"
            android:id="@+id/txtGia"
            android:text="15,000 VND/bát"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"

        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textColor="@color/md_grey_800"
            android:text="@string/thanhTien"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textColor="@color/md_grey_900"
            android:textSize="16sp"
            android:text="15,000 VND"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_button_orange_700"
            android:textColor="@color/md_white"
            android:id="@+id/btnDat"
            android:layout_marginRight="10dp"
            android:text="@string/dat"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_button_orange_700"
            android:textColor="@color/md_white"
            android:id="@+id/btnHuy"
            android:layout_marginLeft="10dp"
            android:text="@string/huy"/>
    </LinearLayout>

</LinearLayout>
