<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white"
    android:orientation="vertical"
    tools:context=".ui.fragment.ThongBaoFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/md_blue_500"
        android:text="@string/thongBao"
        android:textSize="16sp"
        android:textColor="@color/md_white"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/viewNotification"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_notify"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/chuaCoTinNhanMoi"
            android:textColor="@color/md_grey_800"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/xemTatCaTinNhanTaiDay"
            android:textColor="@color/md_grey_600"
            android:textSize="14sp" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="4dp"
        android:id="@+id/lvDanhSachThongBao"/>
</LinearLayout>
